[nosetests]
with-sqla_testing = true
where = test
cover-package = sqlalchemy_phoenix
with-coverage = 1
cover-erase = 1

[pytest]
addopts= --tb native -v -r fxX
python_files=test/*test_*.py

[sqla_testing]
requirement_cls=sqlalchemy_phoenix.requirements:Requirements
profile_file=.profiles.txt

[db]
default=phoenix://localhost:8765/

[bdist_wheel]
universal=1

[metadata]
description-file = README.md